--- a/Code/AutoCell/configdayandnightautomatonwindow.ui
+++ b/Code/AutoCell/configdayandnightautomatonwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>410</width>
-    <height>240</height>
+    <height>250</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>410</width>
-    <height>240</height>
+    <height>250</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>410</width>
-    <height>240</height>
+    <height>250</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -37,7 +37,7 @@
      <x>0</x>
      <y>0</y>
      <width>411</width>
-     <height>241</height>
+     <height>251</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -206,10 +206,16 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
           <width>100</width>
-          <height>100</height>
+          <height>30</height>
          </size>
         </property>
         <property name="font">
@@ -230,17 +236,23 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="saveConfigButton">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
           <width>150</width>
-          <height>100</height>
+          <height>30</height>
          </size>
         </property>
         <property name="font">
@@ -261,10 +273,16 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
           <width>100</width>
-          <height>100</height>
+          <height>30</height>
          </size>
         </property>
         <property name="font">
@@ -290,5 +308,59 @@
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>returnButton</sender>
+   <signal>clicked()</signal>
+   <receiver>ConfigDayAndNightAutomatonWindow</receiver>
+   <slot>previousWindow()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>58</x>
+     <y>214</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>204</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>validateButton</sender>
+   <signal>clicked()</signal>
+   <receiver>ConfigDayAndNightAutomatonWindow</receiver>
+   <slot>launchAutomaton()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>352</x>
+     <y>214</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>204</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>saveConfigButton</sender>
+   <signal>clicked()</signal>
+   <receiver>ConfigDayAndNightAutomatonWindow</receiver>
+   <slot>saveConfig()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>205</x>
+     <y>214</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>204</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>previousWindow()</slot>
+  <slot>saveConfig()</slot>
+  <slot>launchAutomaton()</slot>
+ </slots>
 </ui>
