--- a/Code/AutoCell/configdayandnightautomatonwindow.ui
+++ b/Code/AutoCell/configdayandnightautomatonwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>410</width>
+    <width>460</width>
     <height>250</height>
    </rect>
   </property>
@@ -18,13 +18,13 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>410</width>
+    <width>460</width>
     <height>250</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>410</width>
+    <width>460</width>
     <height>250</height>
    </size>
   </property>
@@ -36,7 +36,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>411</width>
+     <width>461</width>
      <height>251</height>
     </rect>
    </property>
@@ -124,7 +124,7 @@
        <number>20</number>
       </property>
       <item row="1" column="0">
-       <widget class="QLabel" name="cellNbLabel">
+       <widget class="QLabel" name="lineNbLabel">
         <property name="font">
          <font>
           <family>Open Sans</family>
@@ -137,7 +137,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="stateNbLineEdit">
+       <widget class="QLineEdit" name="colNbLineEdit">
         <property name="maximumSize">
          <size>
           <width>100</width>
@@ -149,10 +149,16 @@
           <family>Open Sans</family>
          </font>
         </property>
+        <property name="layoutDirection">
+         <enum>Qt::RightToLeft</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="stateNbLabel">
+       <widget class="QLabel" name="colNbLabel">
         <property name="font">
          <font>
           <family>Open Sans</family>
@@ -165,7 +171,7 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLineEdit" name="cellNbLineEdit">
+       <widget class="QLineEdit" name="lineNbLineEdit">
         <property name="maximumSize">
          <size>
           <width>100</width>
@@ -176,6 +182,12 @@
          <font>
           <family>Open Sans</family>
          </font>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::RightToLeft</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -261,7 +273,37 @@
          </font>
         </property>
         <property name="text">
-         <string>Sauvegarder config</string>
+         <string>Sauvegarder</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="loadConfigButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>150</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>9</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Charger</string>
         </property>
        </widget>
       </item>
@@ -357,10 +399,27 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>loadConfigButton</sender>
+   <signal>clicked()</signal>
+   <receiver>ConfigDayAndNightAutomatonWindow</receiver>
+   <slot>loadConfig()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>283</x>
+     <y>214</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>229</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>previousWindow()</slot>
   <slot>saveConfig()</slot>
   <slot>launchAutomaton()</slot>
+  <slot>loadConfig()</slot>
  </slots>
 </ui>
