--- a/Code/AutoCell/configelementaryautomatonwindow.ui
+++ b/Code/AutoCell/configelementaryautomatonwindow.ui
@@ -163,7 +163,10 @@
          </font>
         </property>
         <property name="layoutDirection">
-         <enum>Qt::LeftToRight</enum>
+         <enum>Qt::RightToLeft</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -194,7 +197,10 @@
          </font>
         </property>
         <property name="layoutDirection">
-         <enum>Qt::LeftToRight</enum>
+         <enum>Qt::RightToLeft</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -706,7 +712,37 @@
          </font>
         </property>
         <property name="text">
-         <string>Sauvegarder config</string>
+         <string>Sauvegarder</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="loadConfigButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>150</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>9</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Charger</string>
         </property>
        </widget>
       </item>
@@ -802,10 +838,27 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>loadConfigButton</sender>
+   <signal>clicked()</signal>
+   <receiver>ConfigElementaryAutomatonWindow</receiver>
+   <slot>loadConfig()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>283</x>
+     <y>294</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>229</x>
+     <y>164</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>previousWindow()</slot>
   <slot>saveConfig()</slot>
   <slot>launchAutomaton()</slot>
+  <slot>loadConfig()</slot>
  </slots>
 </ui>
