--- a/Code/AutoCell/simulationwindow.ui
+++ b/Code/AutoCell/simulationwindow.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>630</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>800</width>
-    <height>600</height>
+    <height>630</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>800</width>
-    <height>600</height>
+    <height>630</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -31,7 +31,7 @@
      <x>0</x>
      <y>0</y>
      <width>802</width>
-     <height>602</height>
+     <height>628</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -318,6 +318,31 @@
       </attribute>
      </widget>
     </item>
+    <item>
+     <widget class="QPushButton" name="returButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>100</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Retour au menu</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
@@ -403,6 +428,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>returButton</sender>
+   <signal>clicked()</signal>
+   <receiver>SimulationWindow</receiver>
+   <slot>returnToMainWindow()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>69</x>
+     <y>597</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>314</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>saveAutomaton()</slot>
@@ -411,5 +452,6 @@
   <slot>stepByStep()</slot>
   <slot>stop()</slot>
   <slot>updateSpeed()</slot>
+  <slot>returnToMainWindow()</slot>
  </slots>
 </ui>
